--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"dist/**"
 	],
 	"scripts": {
-		"build": "npx tsc --noEmit false",
+		"build": "tsc --noEmit false --rootDir src --outDir dist",
 		"prepublishOnly": "npm run build",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -32,12 +32,22 @@
 		"remark-mdx-frontmatter": "5.x"
 	},
 	"devDependencies": {
+		"@hotcakes/eslint-config": "^1.2.0",
 		"@hotcakes/release-config": "^1.2.0",
 		"@hotcakes/tsconfig": "^1.2.0",
 		"@types/estree": "^1.0.5",
 		"@types/hast": "^3.0.4",
 		"@types/mdast": "^4.0.4",
 		"@types/unist": "^3.0.2",
+		"@typescript-eslint/eslint-plugin": "^7.16.0",
+		"@typescript-eslint/parser": "^7.16.0",
+		"eslint": "^8.57.0",
+		"eslint-config-typescript": "^3.0.0",
+		"eslint-config-xo": "^0.43.1",
+		"eslint-config-xo-react": "^0.27.0",
+		"eslint-config-xo-typescript": "^4.0.0",
+		"eslint-plugin-react": "^7.34.4",
+		"eslint-plugin-react-hooks": "^4.6.2",
 		"hast": "^1.0.0",
 		"typescript": "^5.5.3"
 	},
